kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: signup-login-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
